# compvis-cpp

./: .clang-format  .clang-tidy  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
helloworld/: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  helloworld.cpp  main.cpp  vcpkg-configuration.json
helloworld/docs/: engine.md  examples.md
helloworld/src/: cv_util.h  logger.cpp  logger.h
helloworld/src/cli/: argparse.h
helloworld/src/examples/: edges.cpp  registry.cpp  registry.h  show.cpp
